<resources>
    <string name="app_name">Cookbook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signInOrLogin">Login Or Register</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="logout">LOGOUT</string>

    <string name="title_activity_recipe">RecipeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="account">Account></string>
    <string name="appearance">Appearance</string>
    <string name="Language">Language</string>
    <string name="BlockedUsers">Blocked Users</string>
    <string name="Logout">Logout</string>
    <string name="DeleteAccount">Delete Account></string>
    <string name="Username">Username</string>
    <string name="Fullname">Full Name</string>
    <string name="UserHasNoNotifications">You have no notifications</string>
    <string name="CookBkUser23">CookBookUser23</string>
    <string name="PlaceHolderFullName">Jack Black</string>
    <string name="PlaceHolderBio">Im just a User who occasionally likes cooking 😊 \n ❗❗ Follow for wild recipes ❗❗</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="server_is_down">Server is down, Please try again later</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="test_notification_text"> is now following you </string>
</resources>