<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNavigationView"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:menu="@menu/bottom_menu"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="labeled" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="174dp"
        android:layout_height="66dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="215dp"
        android:text="@string/Logout"
        android:textSize="20sp"
        app:cornerRadius="50dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/settings_CardView"
        android:layout_width="match_parent"
        android:layout_height="294dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="0dp">

        <!--        <ImageView-->
        <!--            android:id="@+id/imageView"-->
        <!--            android:layout_width="136dp"-->
        <!--            android:layout_height="107dp"-->
        <!--            android:layout_marginStart="10dp"-->
        <!--            android:layout_marginTop="42dp"-->
        <!--            android:layout_marginEnd="306dp"-->
        <!--            android:radius="120dp"-->
        <!--            app:srcCompat="@drawable/foodplaceholder" />-->


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="344dp"
                android:layout_height="97dp"
                android:src="@drawable/chef"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="32dp" />

            <TextView
                android:id="@+id/settings_FullName_TextView"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/Fullname"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/settings_UserName_TextView"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/Username"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_FullName_TextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>