<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/profile_serverErrorTextView"
        android:layout_width="268dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="-1dp"
        android:text="@string/server_is_down"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollviewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/CookBkUser23"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/topBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7sp">


                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profileImage"
                    android:layout_width="90sp"
                    android:layout_height="95sp"
                    android:layout_margin="0sp"
                    android:padding="0sp"
                    android:src="@drawable/chef"
                    app:civ_border_color="@android:color/black"
                    app:civ_border_width="2dp" />


                <LinearLayout
                    android:id="@+id/follow_counts_id"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:layout_marginRight="5sp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/postsNumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="0"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="Posts" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="35sp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/followersNumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="0"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="Followers" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="35sp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/followingNumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="0"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="Following" />
                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearId"
                android:layout_width="match_parent"
                android:layout_height="46dp">

                <TextView
                    android:id="@+id/FullNameTextView"
                    android:layout_width="100sp"
                    android:layout_height="match_parent"
                    android:paddingLeft="5sp"
                    android:text="@string/PlaceHolderFullName"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/follow_button"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="70sp"
                    android:text="@string/follow"
                    android:visibility="gone" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/bioTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="4sp"
                    android:text="@string/PlaceHolderBio"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/profile_refreshLayout"
                android:layout_width="match_parent"
                android:layout_height="547dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/profile_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="false"
                    android:layout_marginStart="1dp" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="541dp"
                android:visibility="gone">


            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="5dp"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_menu" />


</RelativeLayout>